// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MembersEnhanced /> Should render <MembersEnhanced /> with defaultProps 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des sociétaires
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component <MembersEnhanced /> Should render <MembersEnhanced /> with one member 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des sociétaires
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
      <table
        class="af-table af-table--members"
      >
        <thead
          class="af-table__thead"
        >
          <tr
            class="af-table__tr"
          >
            <th
              class="af-table__th"
            >
              Nom
            </th>
            <th
              class="af-table__th"
            >
              Prénom
            </th>
            <th
              class="af-table__th"
            >
              Date de naissance
            </th>
            <th
              class="af-table__th"
            >
              Type
            </th>
          </tr>
        </thead>
        <tbody
          class="af-table__body"
        >
          <tr
            class="af-table__tr"
          >
            <td
              class="af-table__cell"
            >
              Samuel
            </td>
            <td
              class="af-table__cell"
            >
              Gomez
            </td>
            <td
              class="af-table__cell"
            >
              20/10/1985
            </td>
            <td
              class="af-table__cell"
            >
              PP
            </td>
          </tr>
        </tbody>
      </table>
       
    </div>
  </div>
</DocumentFragment>
`;
